[tool.poetry]
name = "day5-check"
version = "0.1.0"
description = ""
authors = ["seungmin <loglog354@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.49.1"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.156.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
